# Reaper-MCP

./: .gitignore  README.md  REAPER API functions.html  REAPER API functions.webarchive  lessonsLearned.md
bridge/: mcp_helpers.lua  reaper_mcp_bridge.lua  selftest.lua
docs/: ROADMAP.md
server/: README.md  make_lofi.py  pyproject.toml
server/reaper_mcp/: __init__.py  bridge.py  gemini.py  music.py  server.py  tools.py
server/tests/: README.md  conftest.py  test_bridge.py  test_phase_ab.py  test_phase_cd.py  test_phase_e.py  test_phase_f.py  test_tools.py
