[project]
name = "reaper-mcp"
version = "0.1.0"
description = "MCP server for controlling Reaper DAW via a file-based ReaScript bridge"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.0",
    "requests>=2.31.0",
]

[project.scripts]
reaper-mcp = "reaper_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reaper_mcp"]
